refactor(security): 迁移到Jakarta命名空间并升级Spring Security配置
- 将所有javax.servlet和javax.annotation替换为jakarta对应包
- 更新Spring Security配置类以使用新版本API和注解
- 升级Swagger注解从v2到v3版本
- 添加AutoConfiguration注册文件
- 修改项目依赖管理结构
- 更新JDK版本要求从21降至17
- 添加安全过滤链配置日志记录
- 使用新的SecurityFilterChain替代旧的WebSecurityConfigurerAdapter